[project]
name = "ml-research-agent"
version = "0.1.0"
description = "LLM-powered agent that searches arxiv and synthesizes literature reviews on ML topics."
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2",
    "langchain-core>=1.3",
    "langchain-openai>=1.1",
    "langgraph>=1.1",
    "pydantic>=2.10",
    "python-dotenv>=1.0",
    "arxiv>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
